--- a/blocks/join/__images/join__images.css
+++ b/blocks/join/__images/join__images.css
@@ -9,7 +9,7 @@
 }
 
 @media (max-width: 380px) {
-    .join {
-        background-size: cover;
+    .join__images {
+        background-size: 300px 300px;
     }
 }
