--- a/blocks/top/__text/top__text.css
+++ b/blocks/top/__text/top__text.css
@@ -16,3 +16,32 @@
 
     }
 }
+
+
+
+.top__price1 {
+    padding: 10px 12px 6px 0px;
+    text-align: center;
+    color: #808080;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 0;
+    border-radius: 500px;
+    background: linear-gradient(0deg, rgba(255, 255, 255, 0.63) 0%, rgba(255, 255, 255, 0.63) 100%), radial-gradient(141.42% 141.42% at 100% 0%, #E0B8FF 0%, #B6B9FF 100%);
+}
+
+.top__price1-up {
+    vertical-align: 2px;
+}
+
+.top__discount1 {
+    padding: 3px 12px;
+    color: #2E2C21;
+    text-decoration: none;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 0;
+    border-radius: 500px;
+    background: radial-gradient(141.42% 141.42% at 100% 0%, #E0B8FF 0%, #B6B9FF 100%);
+    margin-right: 12px;
+}
